syntax = "proto3";

option go_package = ".;pb";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message StartDomainRequest {
  string host = 1;
  string uuid = 2;
}

message StopDomainRequest {
  string host = 1;
  string uuid = 2;
  bool force = 3;
}

message GetDomainRequest {
  string uuid = 1;
  string host = 2;
}

message Domain {
  uint64 id = 1;
  string uuid = 2;
  string name = 3;
  uint32 vcpu = 4;
  uint64 memory = 5;
  string network = 6;
  string bridge = 7;
  string state = 8;
  string private_ip = 9;
  string ipv6_address = 15;
  string user_data = 10;
  bool nested_virtualization = 11;
  string base_image = 12;
  google.protobuf.Timestamp created_at = 13;
  string os_type = 14;
}

message ListDomainsRequest {
  string host = 1;
}

message ListDomainsResponse {
  repeated Domain domains = 1;
}

message CreateDomainRequest {
  Domain domain = 1;
  string host = 2;
}

message DeleteDomainRequest {
  string uuid = 1;
  string host = 2;
}

message DownloadImageRequest {
  string domain_id = 1;
  string host = 2;
}

message ImageChunk {
  bytes bytes = 1;
}


message GetNetworkRequest {
  string uuid = 1;
  string host = 2 [deprecated = true];
}

message Network {
  string uuid = 1;
  string name = 2;
  string cidr = 3;
  string cidr6 = 4;
}

message ListNetworksRequest {
  string host = 1 [deprecated = true];
}

message ListNetworksResponse {
  repeated Network networks = 1;
}

message CreateNetworkRequest {
  Network network = 1;
  string host = 2 [deprecated = true];
}

message DeleteNetworkRequest {
  string uuid = 1;
  string host = 2 [deprecated = true];
}


service DomainService {
  rpc GetDomain(GetDomainRequest) returns (Domain) {}
  rpc ListDomains(ListDomainsRequest) returns (ListDomainsResponse) {}
  rpc CreateDomain(CreateDomainRequest) returns (Domain) {}
  rpc DeleteDomain(DeleteDomainRequest) returns (google.protobuf.Empty) {}

  rpc DownloadImage(DownloadImageRequest) returns (stream ImageChunk) {}

  rpc GetNetwork(GetNetworkRequest) returns (Network) {}
  rpc ListNetworks(ListNetworksRequest) returns (ListNetworksResponse) {}
  rpc CreateNetwork(CreateNetworkRequest) returns (Network) {}
  rpc DeleteNetwork(DeleteNetworkRequest) returns (google.protobuf.Empty) {}
}
